add docs and response for show opening handler
